Project2/TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Decls
Rule 2     Programa -> Atrib
Rule 3     Programa -> Decls Corpo
Rule 4     Programa -> Atrib Corpo
Rule 5     Programa -> Corpo
Rule 6     Corpo -> Codigo
Rule 7     Codigo -> Proc Codigo
Rule 8     Codigo -> Decls Codigo
Rule 9     Codigo -> Atrib Codigo
Rule 10    Codigo -> COMENTARIO Codigo
Rule 11    Codigo -> Proc
Rule 12    Codigo -> Atrib
Rule 13    Codigo -> Decls
Rule 14    Codigo -> COMENTARIO
Rule 15    Decls -> Decl PONTOVIRGULA
Rule 16    Decls -> Decl VIRGULA Decls
Rule 17    expr -> exprArit
Rule 18    expr -> exprRel
Rule 19    Proc -> IF
Rule 20    Proc -> WHILE
Rule 21    Proc -> PRINTAR
Rule 22    Decl -> INT ID
Rule 23    Atrib -> INT ID IGUAL expr PONTOVIRGULA
Rule 24    Atrib -> ID IGUAL expr PONTOVIRGULA
Rule 25    Atrib -> ALTERA ID IGUAL expr PONTOVIRGULA
Rule 26    expr -> NUM
Rule 27    expr -> ID
Rule 28    expr -> INPUT
Rule 29    Decl -> LISTA INT NUM VIRGULA ID
Rule 30    Atrib -> ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
Rule 31    expr -> ID LPAREN_RETO expr RPAREN_RETO
Rule 32    exprArit -> exprArit PLUS term
Rule 33    exprArit -> exprArit MINUS term
Rule 34    exprArit -> term
Rule 35    term -> term TIMES factor
Rule 36    term -> term DIVIDE factor
Rule 37    term -> factor
Rule 38    factor -> NUM
Rule 39    factor -> ID
Rule 40    exprRel -> expr IGUALIGUAL expr
Rule 41    exprRel -> expr DIFERENTE expr
Rule 42    exprRel -> expr MENOR expr
Rule 43    exprRel -> expr MENOROUIGUAL expr
Rule 44    exprRel -> expr MAIOR expr
Rule 45    exprRel -> expr MAIOROUIGUAL expr
Rule 46    exprRel -> expr EE expr
Rule 47    exprRel -> expr OU expr
Rule 48    IF -> SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
Rule 49    IF -> SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
Rule 50    WHILE -> ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
Rule 51    PRINTAR -> IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
Rule 52    PRINTAR -> IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
Rule 53    COMENTARIO -> COMENTADO
Rule 54    Decl -> MATRIZ INT NUM NUM VIRGULA ID
Rule 55    Atrib -> ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
Rule 56    Atrib -> ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL LISTA
Rule 57    expr -> ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO

Terminals, with rules where they appear

ALTERA               : 25 30 55 56
COMENTADO            : 53
DIFERENTE            : 41
DIVIDE               : 36
EE                   : 46
ENQUANTO             : 50
ENTAO                : 48 49
FAZ                  : 50
FIM_COND             : 48 49
FIM_ENQUANTO         : 50
FRASE                : 51
ID                   : 22 23 24 25 27 29 30 31 39 52 54 55 56 57
IGUAL                : 23 24 25 30 55 56
IGUALIGUAL           : 40
IMPRIMIR             : 51 52
INPUT                : 28
INT                  : 22 23 29 54
LISTA                : 29 56
LPAREN               : 48 49 50 51 52
LPAREN_RETO          : 30 31 55 55 56 57 57
MAIOR                : 44
MAIOROUIGUAL         : 45
MATRIZ               : 54
MENOR                : 42
MENOROUIGUAL         : 43
MINUS                : 33
NUM                  : 26 29 38 54 54
OU                   : 47
PLUS                 : 32
PONTOVIRGULA         : 15 23 24 25 30 48 49 50 51 52 55
RPAREN               : 48 49 50 51 52
RPAREN_RETO          : 30 31 55 55 56 57 57
SE                   : 48 49
SENAO                : 49
TIMES                : 35
VIRGULA              : 16 29 54
error                : 

Nonterminals, with rules where they appear

Atrib                : 2 4 9 12
COMENTARIO           : 10 14
Codigo               : 6 7 8 9 10 48 49 49 50
Corpo                : 3 4 5
Decl                 : 15 16
Decls                : 1 3 8 13 16
IF                   : 19
PRINTAR              : 21
Proc                 : 7 11
Programa             : 0
WHILE                : 20
expr                 : 23 24 25 30 30 31 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 55 55 55 56 57 57
exprArit             : 17 32 33
exprRel              : 18 48 49 50
factor               : 35 36 37
term                 : 32 33 34 35 36

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Decls
    (2) Programa -> . Atrib
    (3) Programa -> . Decls Corpo
    (4) Programa -> . Atrib Corpo
    (5) Programa -> . Corpo
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (55) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL LISTA
    (6) Corpo -> . Codigo
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (54) Decl -> . MATRIZ INT NUM NUM VIRGULA ID
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (53) COMENTARIO -> . COMENTADO
    (48) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (49) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (50) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (51) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (52) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA

    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    LISTA           shift and go to state 9
    MATRIZ          shift and go to state 11
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20

    Programa                       shift and go to state 1
    Decls                          shift and go to state 2
    Atrib                          shift and go to state 3
    Corpo                          shift and go to state 4
    Decl                           shift and go to state 5
    Codigo                         shift and go to state 10
    Proc                           shift and go to state 12
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Decls .
    (3) Programa -> Decls . Corpo
    (8) Codigo -> Decls . Codigo
    (13) Codigo -> Decls .
    (6) Corpo -> . Codigo
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (55) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL LISTA
    (53) COMENTARIO -> . COMENTADO
    (48) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (49) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (50) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (51) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (52) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (54) Decl -> . MATRIZ INT NUM NUM VIRGULA ID

  ! reduce/reduce conflict for $end resolved using rule 1 (Programa -> Decls .)
    $end            reduce using rule 1 (Programa -> Decls .)
    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20
    LISTA           shift and go to state 9
    MATRIZ          shift and go to state 11

  ! $end            [ reduce using rule 13 (Codigo -> Decls .) ]

    Decls                          shift and go to state 21
    Corpo                          shift and go to state 22
    Codigo                         shift and go to state 23
    Proc                           shift and go to state 12
    Atrib                          shift and go to state 24
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16
    Decl                           shift and go to state 5

state 3

    (2) Programa -> Atrib .
    (4) Programa -> Atrib . Corpo
    (9) Codigo -> Atrib . Codigo
    (12) Codigo -> Atrib .
    (6) Corpo -> . Codigo
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (55) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL LISTA
    (53) COMENTARIO -> . COMENTADO
    (48) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (49) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (50) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (51) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (52) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (54) Decl -> . MATRIZ INT NUM NUM VIRGULA ID

  ! reduce/reduce conflict for $end resolved using rule 2 (Programa -> Atrib .)
    $end            reduce using rule 2 (Programa -> Atrib .)
    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20
    LISTA           shift and go to state 9
    MATRIZ          shift and go to state 11

  ! $end            [ reduce using rule 12 (Codigo -> Atrib .) ]

    Atrib                          shift and go to state 24
    Corpo                          shift and go to state 25
    Codigo                         shift and go to state 26
    Proc                           shift and go to state 12
    Decls                          shift and go to state 21
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16
    Decl                           shift and go to state 5

state 4

    (5) Programa -> Corpo .

    $end            reduce using rule 5 (Programa -> Corpo .)


state 5

    (15) Decls -> Decl . PONTOVIRGULA
    (16) Decls -> Decl . VIRGULA Decls

    PONTOVIRGULA    shift and go to state 27
    VIRGULA         shift and go to state 28


state 6

    (23) Atrib -> INT . ID IGUAL expr PONTOVIRGULA
    (22) Decl -> INT . ID

    ID              shift and go to state 29


state 7

    (24) Atrib -> ID . IGUAL expr PONTOVIRGULA

    IGUAL           shift and go to state 30


state 8

    (25) Atrib -> ALTERA . ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> ALTERA . ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (55) Atrib -> ALTERA . ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) Atrib -> ALTERA . ID LPAREN_RETO expr RPAREN_RETO IGUAL LISTA

    ID              shift and go to state 31


state 9

    (29) Decl -> LISTA . INT NUM VIRGULA ID

    INT             shift and go to state 32


state 10

    (6) Corpo -> Codigo .

    $end            reduce using rule 6 (Corpo -> Codigo .)


state 11

    (54) Decl -> MATRIZ . INT NUM NUM VIRGULA ID

    INT             shift and go to state 33


state 12

    (7) Codigo -> Proc . Codigo
    (11) Codigo -> Proc .
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (55) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL LISTA
    (53) COMENTARIO -> . COMENTADO
    (48) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (49) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (50) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (51) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (52) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (54) Decl -> . MATRIZ INT NUM NUM VIRGULA ID

    $end            reduce using rule 11 (Codigo -> Proc .)
    FIM_COND        reduce using rule 11 (Codigo -> Proc .)
    SENAO           reduce using rule 11 (Codigo -> Proc .)
    FIM_ENQUANTO    reduce using rule 11 (Codigo -> Proc .)
    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20
    LISTA           shift and go to state 9
    MATRIZ          shift and go to state 11

    Proc                           shift and go to state 12
    Codigo                         shift and go to state 34
    Decls                          shift and go to state 21
    Atrib                          shift and go to state 24
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16
    Decl                           shift and go to state 5

state 13

    (10) Codigo -> COMENTARIO . Codigo
    (14) Codigo -> COMENTARIO .
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (55) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL LISTA
    (53) COMENTARIO -> . COMENTADO
    (48) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (49) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (50) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (51) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (52) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (54) Decl -> . MATRIZ INT NUM NUM VIRGULA ID

    $end            reduce using rule 14 (Codigo -> COMENTARIO .)
    FIM_COND        reduce using rule 14 (Codigo -> COMENTARIO .)
    SENAO           reduce using rule 14 (Codigo -> COMENTARIO .)
    FIM_ENQUANTO    reduce using rule 14 (Codigo -> COMENTARIO .)
    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20
    LISTA           shift and go to state 9
    MATRIZ          shift and go to state 11

    COMENTARIO                     shift and go to state 13
    Codigo                         shift and go to state 35
    Proc                           shift and go to state 12
    Decls                          shift and go to state 21
    Atrib                          shift and go to state 24
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16
    Decl                           shift and go to state 5

state 14

    (19) Proc -> IF .

    INT             reduce using rule 19 (Proc -> IF .)
    ID              reduce using rule 19 (Proc -> IF .)
    ALTERA          reduce using rule 19 (Proc -> IF .)
    COMENTADO       reduce using rule 19 (Proc -> IF .)
    SE              reduce using rule 19 (Proc -> IF .)
    ENQUANTO        reduce using rule 19 (Proc -> IF .)
    IMPRIMIR        reduce using rule 19 (Proc -> IF .)
    LISTA           reduce using rule 19 (Proc -> IF .)
    MATRIZ          reduce using rule 19 (Proc -> IF .)
    $end            reduce using rule 19 (Proc -> IF .)
    FIM_COND        reduce using rule 19 (Proc -> IF .)
    SENAO           reduce using rule 19 (Proc -> IF .)
    FIM_ENQUANTO    reduce using rule 19 (Proc -> IF .)


state 15

    (20) Proc -> WHILE .

    INT             reduce using rule 20 (Proc -> WHILE .)
    ID              reduce using rule 20 (Proc -> WHILE .)
    ALTERA          reduce using rule 20 (Proc -> WHILE .)
    COMENTADO       reduce using rule 20 (Proc -> WHILE .)
    SE              reduce using rule 20 (Proc -> WHILE .)
    ENQUANTO        reduce using rule 20 (Proc -> WHILE .)
    IMPRIMIR        reduce using rule 20 (Proc -> WHILE .)
    LISTA           reduce using rule 20 (Proc -> WHILE .)
    MATRIZ          reduce using rule 20 (Proc -> WHILE .)
    $end            reduce using rule 20 (Proc -> WHILE .)
    FIM_COND        reduce using rule 20 (Proc -> WHILE .)
    SENAO           reduce using rule 20 (Proc -> WHILE .)
    FIM_ENQUANTO    reduce using rule 20 (Proc -> WHILE .)


state 16

    (21) Proc -> PRINTAR .

    INT             reduce using rule 21 (Proc -> PRINTAR .)
    ID              reduce using rule 21 (Proc -> PRINTAR .)
    ALTERA          reduce using rule 21 (Proc -> PRINTAR .)
    COMENTADO       reduce using rule 21 (Proc -> PRINTAR .)
    SE              reduce using rule 21 (Proc -> PRINTAR .)
    ENQUANTO        reduce using rule 21 (Proc -> PRINTAR .)
    IMPRIMIR        reduce using rule 21 (Proc -> PRINTAR .)
    LISTA           reduce using rule 21 (Proc -> PRINTAR .)
    MATRIZ          reduce using rule 21 (Proc -> PRINTAR .)
    $end            reduce using rule 21 (Proc -> PRINTAR .)
    FIM_COND        reduce using rule 21 (Proc -> PRINTAR .)
    SENAO           reduce using rule 21 (Proc -> PRINTAR .)
    FIM_ENQUANTO    reduce using rule 21 (Proc -> PRINTAR .)


state 17

    (53) COMENTARIO -> COMENTADO .

    INT             reduce using rule 53 (COMENTARIO -> COMENTADO .)
    ID              reduce using rule 53 (COMENTARIO -> COMENTADO .)
    ALTERA          reduce using rule 53 (COMENTARIO -> COMENTADO .)
    COMENTADO       reduce using rule 53 (COMENTARIO -> COMENTADO .)
    SE              reduce using rule 53 (COMENTARIO -> COMENTADO .)
    ENQUANTO        reduce using rule 53 (COMENTARIO -> COMENTADO .)
    IMPRIMIR        reduce using rule 53 (COMENTARIO -> COMENTADO .)
    LISTA           reduce using rule 53 (COMENTARIO -> COMENTADO .)
    MATRIZ          reduce using rule 53 (COMENTARIO -> COMENTADO .)
    $end            reduce using rule 53 (COMENTARIO -> COMENTADO .)
    FIM_COND        reduce using rule 53 (COMENTARIO -> COMENTADO .)
    SENAO           reduce using rule 53 (COMENTARIO -> COMENTADO .)
    FIM_ENQUANTO    reduce using rule 53 (COMENTARIO -> COMENTADO .)


state 18

    (48) IF -> SE . LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (49) IF -> SE . LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA

    LPAREN          shift and go to state 36


state 19

    (50) WHILE -> ENQUANTO . LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA

    LPAREN          shift and go to state 37


state 20

    (51) PRINTAR -> IMPRIMIR . LPAREN FRASE RPAREN PONTOVIRGULA
    (52) PRINTAR -> IMPRIMIR . LPAREN ID RPAREN PONTOVIRGULA

    LPAREN          shift and go to state 38


state 21

    (8) Codigo -> Decls . Codigo
    (13) Codigo -> Decls .
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (55) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL LISTA
    (53) COMENTARIO -> . COMENTADO
    (48) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (49) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (50) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (51) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (52) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (54) Decl -> . MATRIZ INT NUM NUM VIRGULA ID

    $end            reduce using rule 13 (Codigo -> Decls .)
    FIM_COND        reduce using rule 13 (Codigo -> Decls .)
    SENAO           reduce using rule 13 (Codigo -> Decls .)
    FIM_ENQUANTO    reduce using rule 13 (Codigo -> Decls .)
    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20
    LISTA           shift and go to state 9
    MATRIZ          shift and go to state 11

    Decls                          shift and go to state 21
    Codigo                         shift and go to state 39
    Proc                           shift and go to state 12
    Atrib                          shift and go to state 24
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16
    Decl                           shift and go to state 5

state 22

    (3) Programa -> Decls Corpo .

    $end            reduce using rule 3 (Programa -> Decls Corpo .)


state 23

    (8) Codigo -> Decls Codigo .
    (6) Corpo -> Codigo .

  ! reduce/reduce conflict for $end resolved using rule 6 (Corpo -> Codigo .)
    $end            reduce using rule 6 (Corpo -> Codigo .)

  ! $end            [ reduce using rule 8 (Codigo -> Decls Codigo .) ]


state 24

    (9) Codigo -> Atrib . Codigo
    (12) Codigo -> Atrib .
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (55) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL LISTA
    (53) COMENTARIO -> . COMENTADO
    (48) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (49) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (50) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (51) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (52) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (54) Decl -> . MATRIZ INT NUM NUM VIRGULA ID

    $end            reduce using rule 12 (Codigo -> Atrib .)
    FIM_COND        reduce using rule 12 (Codigo -> Atrib .)
    SENAO           reduce using rule 12 (Codigo -> Atrib .)
    FIM_ENQUANTO    reduce using rule 12 (Codigo -> Atrib .)
    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20
    LISTA           shift and go to state 9
    MATRIZ          shift and go to state 11

    Atrib                          shift and go to state 24
    Codigo                         shift and go to state 40
    Proc                           shift and go to state 12
    Decls                          shift and go to state 21
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16
    Decl                           shift and go to state 5

state 25

    (4) Programa -> Atrib Corpo .

    $end            reduce using rule 4 (Programa -> Atrib Corpo .)


state 26

    (9) Codigo -> Atrib Codigo .
    (6) Corpo -> Codigo .

  ! reduce/reduce conflict for $end resolved using rule 6 (Corpo -> Codigo .)
    $end            reduce using rule 6 (Corpo -> Codigo .)

  ! $end            [ reduce using rule 9 (Codigo -> Atrib Codigo .) ]


state 27

    (15) Decls -> Decl PONTOVIRGULA .

    INT             reduce using rule 15 (Decls -> Decl PONTOVIRGULA .)
    ID              reduce using rule 15 (Decls -> Decl PONTOVIRGULA .)
    ALTERA          reduce using rule 15 (Decls -> Decl PONTOVIRGULA .)
    COMENTADO       reduce using rule 15 (Decls -> Decl PONTOVIRGULA .)
